--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.6",
-    "@mui/styled-engine-sc": "6.0.0-alpha.14",
+    "@mui/styled-engine-sc": "^5.14.12",
     "@notionhq/client": "^2.2.14",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
@@ -42,7 +42,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "yargs": "^17.7.2"
   },
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
