--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -26,3 +26,4 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_GRE_VOCAB_A3D74 }}"
           channelId: live
           projectId: gre-vocab-a3d74
+          entryPoint: "./firebase"
